fix(app-wrap): align socia media buttons with logo

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -55,10 +55,11 @@
   align-items: center;
 
   padding: 1rem;
+  padding-left: 2rem;
 
   div {
-    width: 40px;
-    height: 40px;
+    width: 37px;
+    height: 37px;
     border-radius: 50%;
     margin: 0.25rem 0;
 
@@ -82,6 +83,18 @@
 
       svg {
         color: var(--base-bg-color);
+      }
+    }
+
+    @media screen and (min-width: 2000px) {
+      width: 55px;
+      height: 55px;
+  
+      margin: 0.5rem 0;
+  
+      svg {
+        width: 37px;
+        height: 37px;
       }
     }
   }
